Cleaning up the font sizes for the web page and fixed the collapse navbar issuse

--- a/webroot/css/feedme.css
+++ b/webroot/css/feedme.css
@@ -1,4 +1,4 @@
-body{color:#88818d;line-height:1.4em;font-size:125%;font-family:"museo-sans","Helvetica Neue",Helvetica,Arial,sans-serif;font-weight:300;overflow-x:hidden;-webkit-text-size-adjust:none;}
+body{color:#88818d;line-height:1.4em;font-size:125% !important;font-family:"museo-sans","Helvetica Neue",Helvetica,Arial,sans-serif;font-weight:300;overflow-x:hidden;-webkit-text-size-adjust:none;}
 
 /******************************************************************/
 
@@ -219,7 +219,7 @@ body{color:#88818d;line-height:1.4em;font-size:125%;font-family:"museo-sans","He
 form{margin:0 !important;}
 fieldset{padding:0 !important;margin:0 !important;border:0 !important;}
 legend{display:block !important;width:100% !important;padding:0 !important;margin-bottom:20px !important;font-size:21px !important;line-height:40px !important;color:#333333 !important;border:0 !important;border-bottom:1px solid #e5e5e5 !important;}
-label{display:inline-block !important;margin-bottom:5px !important;font-weight:bold !important;}
+label{display:inline-block !important;margin-bottom:5px !important;font-weight:bold !important; }
 select,textarea,input[type="text"],input[type="password"],input[type="datetime"],input[type="datetime-local"],input[type="date"],input[type="month"],input[type="time"],input[type="week"],input[type="number"],input[type="email"],input[type="url"],input[type="search"],input[type="tel"],input[type="color"]{display:inline-block !important;min-height:34px !important;padding:6px 9px !important;font-size:14px !important;line-height:20px !important;color:#555555 !important;vertical-align:middle !important;background-color:#ffffff !important;border:1px solid #cfccd0 !important;border-radius:2px !important;-webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075) !important;box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075) !important;-webkit-transition:border linear .2s, box-shadow linear .2s !important;-moz-transition:border linear .2s, box-shadow linear .2s !important;-o-transition:border linear .2s, box-shadow linear .2s !important;transition:border linear .2s, box-shadow linear .2s !important;}
 input,select,textarea{width:100% !important;}
 input[type="file"],input[type="image"],input[type="submit"],input[type="reset"],input[type="button"],input[type="radio"],input[type="checkbox"]{width:auto !important;}
@@ -304,7 +304,7 @@ h1,h2,h3,h4,h5,h6{margin:0 !important;}
 
 
 
-.btn{background-color:#a98cad !important;border:none !important;border-radius:2px !important;font-size:0.7em !important;font-family:"futura-pt",Avenir,Futura,"Helvetica Neue",Helvetica,Arial,sans-serif !important;font-weight:bold !important;text-align:center !important;text-transform:uppercase !important;padding:0 10px !important;height:2em !important;color:white !important;letter-spacing:1px !important;display:inline-block !important;margin-bottom:0 !important;cursor:pointer !important;line-height:2em !important;-webkit-transition:0.1s !important;-moz-transition:0.1s !important;-o-transition:0.1s !important;transition:0.1s !important;text-overflow:ellipsis !important;overflow:hidden !important;white-space:nowrap !important;}.btn.btn-img{padding:0 !important;height:40px !important;width:40px !important;margin:10px !important;}
+.btn{background-color:#3b5998 !important;border:none !important;border-radius:2px !important;font-size:0.7em !important;font-family:"futura-pt",Avenir,Futura,"Helvetica Neue",Helvetica,Arial,sans-serif !important;font-weight:bold !important;text-align:center !important;text-transform:uppercase !important;padding:0 10px !important;height:2em !important;color:white !important;letter-spacing:1px !important;display:inline-block !important;margin-bottom:0 !important;cursor:pointer !important;line-height:2em !important;-webkit-transition:0.1s !important;-moz-transition:0.1s !important;-o-transition:0.1s !important;transition:0.1s !important;text-overflow:ellipsis !important;overflow:hidden !important;white-space:nowrap !important;}.btn.btn-img{padding:0 !important;height:40px !important;width:40px !important;margin:10px !important;}
 
 
 .btn:focus{outline:thin dotted #333 !important;outline:5px auto -webkit-focus-ring-color !important;outline-offset:-2px !important;}
@@ -314,15 +314,15 @@ h1,h2,h3,h4,h5,h6{margin:0 !important;}
 .btn.btn-large{font-size:1em !important;}
 .btn.btn-small{font-size:0.6em !important;line-height:1.2em !important;height:1.2em !important;padding:0 5px !important;}
 .btn.disabled,.btn[disabled],.btn fieldset[disabled]{cursor:default !important;pointer-events:none !important;background:#e8e8e8 !important;color:#cfccd0 !important;}.btn.disabled:hover,.btn[disabled]:hover,.btn fieldset[disabled]:hover,.btn.disabled:active,.btn[disabled]:active,.btn fieldset[disabled]:active{background-color:#e8e8e8 !important;color:#cfccd0 !important;-webkit-box-shadow:none !important;box-shadow:none !important;}
-.btn.btn-light{background-color:#ece8ed !important;color:#a98cad !important;}.btn.btn-light:hover,.btn.btn-light.active{background-color:#a98cad;color:white;}
+.btn.btn-light{background-color:#ece8ed !important;color:#3b5998 !important;}.btn.btn-light:hover,.btn.btn-light.active{background-color:#3b5998;color:white;}
 .btn.icon-right>i,.btn.icon-left>i{width:2em;height:2em;display:inline-block;}
 .btn.icon-right{padding-right:0;}.btn.icon-right>i{float:right;margin-left:10px;border-radius:0 2px 2px 0;}
 .btn.icon-left{padding-left:0;}.btn.icon-left>i{float:left;margin-right:10px;border-radius:2px 0 0 2px;}
 .btn.btn-fb{background-color:#3b5998 !important;;}.btn.btn-fb>i,.btn.btn-fb:hover{background-color:#123065 !important;;}
 .btn input.btn.btn-large{padding-top:0;}
 .add-widget .btn{text-align:left;}
-.btn.btn-follow.active{background-color:#ece8ed;color:#a98cad;}.btn.btn-follow.active:hover{background-color:#a98cad;color:white;}
-.btn-modal{border-radius:2px;width:140px;height:140px;display:block;background-color:#ece8ed;text-align:center;float:left;color:#a98cad;margin:14px;cursor:pointer;font-family:"museo-sans","Helvetica Neue",Helvetica,Arial,sans-serif;font-weight:300;font-size:0.9em;line-height:1.4em;}.btn-modal:hover{color:#490058;}
+.btn.btn-follow.active{background-color:#ece8ed;color:#3b5998;}.btn.btn-follow.active:hover{background-color:#3b5998;color:white;}
+.btn-modal{border-radius:2px;width:140px;height:140px;display:block;background-color:#ece8ed;text-align:center;float:left;color:#3b5998;margin:14px;cursor:pointer;font-family:"museo-sans","Helvetica Neue",Helvetica,Arial,sans-serif;font-weight:300;font-size:0.9em;line-height:1.4em;}.btn-modal:hover{color:#490058;}
 
 
 
@@ -754,4 +754,20 @@ textarea.clean:focus,input[type="text"].clean:focus,input[type="password"].clean
 
 .timeline > li.timeline-inverted > .timeline-badge{
   left: 28px;
+}
+
+/*---------------------------------*/
+    
+.img-index
+{
+    max-width:100%; 
+    max-height:100%;
+    margin:auto;
+    width: 270px;
+    height: auto !important;
+}  
+    
+.model-test-feedme
+{
+    font-size:0.7em !important;
 }
